[package]
name = "linfa-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.57"
linfa = "0.5.1"
linfa-datasets = { version = "0.5.1", features = ["iris"] }
linfa-tsne = "0.5.1"
ndarray = "0.15.4"
wasm-bindgen = "0.2.74"
